solve: text overflow when last message too long

--- a/index.css
+++ b/index.css
@@ -513,6 +513,11 @@ a {
 	float: left;
 	color: #828282;
 	clear: both;
+	overflow: hidden;
+	height: 1em;
+	width: 90%;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 textarea {
